<resources>
    <string name="internal_message_id" translatable="false">csic.ceab.movelab.tigatrapp</string>
    <string name="switchboard_report_button_adult">Reportar un mosquit</string>
    <string name="switchboard_report_button_site">Reportar un lloc</string>
    <string name="data_map_button">Les meves dades</string>
    <string name="dataMap_CD">Les meves dades</string>
    <string name="report_title_adult">New Mosquito Report</string>
    <string name="report_title_site">New Breeding Site Report</string>
    <string name="identifying_breeding_site_title">Breeding Site Checklist</string>
    <string-array name="confirmation_q1_site_array">
        <item>embornal</item>
        <item>font</item>
        <item>basse</item>
        <item> artificial</item>
        <item>bidons</item>
        <item>pous</item>
        <item>altres</item>
    </string-array>
    <string name="visit_website">Visita la pàgina web</string>
    <string name="menu_toggle_language">Español</string>
    <string name="open">Open</string>
    <string name="spinner_prompt">Select Response</string>
    <string name="spinner_nothing_selected">Nothing selected</string>
    <string name="help">Ajuda</string>
    <string name="saved">Viatge guardat.</string>
    <string name="font_credit">Ús de la tipografia Anna en parts de l’App Tigatrapp (www.annavives.com)</string>
    <string name="photo_credit_gallery">Fotografia de R. Eritja (www.eritja.com)</string>
    <string name="photo_credit">Fotografies de R. Eritja (www.eritja.com)</string>
    <string name="refresh">Actualitza</string>
    <string name="nolocnogps_alert">No s\'ha pogut detectar la teva posició perquè ni el GPS ni la ubicació per xarxa mòbil i/o Wi-Fi estan activats. Activa\'ls o senyala la posició al mapa.</string>
    <string name="progtitle_report">Enviant</string>
    <string name="progtitle_trip_saving">Enviant</string>
    <string name="progtitle_trip_deleting">Eliminant</string>
    <string name="progmessage_trip_saving"></string>
    <string name="progmessage_trip_deleting"></string>
    <string name="trip_deleted">Viatge eliminat.</string>
    <string name="nolocation_alert_report">No s\'ha pogut detectar la teva posició. Espera uns segons i torna-ho a intentar o senyala la posició al mapa.</string>
    <string name="upload_error_report">Error d\'enviament. Les dades de la Tigre troballa s\'han guardat al mòbil i s\'enviaran més tard. Gràcies!</string>
    <string name="upload_error_trip_save">Error d\'enviament. Les dades del Tigre viatge s\'han guardat al mòbil i s\'enviaran més tard. Gràcies!</string>
    <string name="upload_error_trip_delete">No s\'ha pogut eliminar el Tigre viatge del servidor. Se seguirà intentant. Gràcies!</string>
    <string name="offline_report">Sense connexió a internet. La Tigre troballa s\'enviarà automàticament quan torni la connexió. Gràcies!</string>
    <string name="offline_trip_save">Sense connexió a internet. El Tigre viatge s\'enviarà automàticament quan torni la connexió. Gràcies!</string>
    <string name="offline_trip_delete">Sense connexió a internet. El Tigre viatge s\'eliminarà del servidor automàticament quan hi torni a haver connexió. Gràcies!</string>
    <string name="upload_error_activation">Sense connexió a internet. Connecta\'t i torna-ho a provar.</string>
    <string name="offline_activation">Sense connexió a internet. Connecta\'t i torna-ho a provar.</string>
    <string name="save_trip">Acaba i envia</string>
    <string name="delete_trip">Acaba i esborra</string>
    <string name="activated">Clau d\'activació correcte. Gràcies per participar!</string>
    <string name="activation_text">Introduir clau d\'activació</string>
    <string name="about">Informació</string>
    <string name="acc_label">Precisió (m): </string>
    <string name="accblank">"Precisió:         "</string>
    <string name="add_note">Si vols, pots escriure un missatge que arribarà als científics del centre de recerca. Per exemple, pots descriure millor la teva Tigre troballa.</string>
    <string name="alt_label">Altitud (m): </string>
    <string name="altblank">"Altitud:         "</string>
    <string name="app_directory">Tigatrapp</string>
    <string name="app_name">Tigatrapp</string>
    <string name="back">Anul·la</string>
    <string name="back_to_trip">Anul·la</string>
    <string name="button_from_camera_CD">Botó per fer una fotografia i afegir-la a la teva Tigre troballa</string>
    <string name="button_note_CD">Botó per afegir un missatge a la teva Tigre troballa</string>
    <string name="button_spec_CD">Botó per indicar si acompanyaràs  la teva Tigre troballa amb una mostra que enviaràs al centre de recerca</string>
    <string name="button_submit_CD">Botó per enviar la teva Tigre troballa al centre de recerca</string>
    <string name="cancel">Anul·la</string>
    <string name="ceab_CD">CEAB logo</string>
    <string name="checklist_CD">Botó per ajudar en l\'identificació del mosquit tigre</string>
    <string name="data_saved">Dades guardades com </string>
    <string name="data_SD_error">Error al guardar l\'arxiu a la targeta SD</string>
    <string name="data_SD_unavailable">Targeta SD No Disponible – l\'arxiu no es pot guardar</string>
    <string name="dipsalut_CD">Dipsalut logo</string>
    <string name="dontknow">No ho sé</string>
    <string name="fecyt_CD">FECYT logo</string>
    <string name="funded_by">Finançat per:</string>
    <string name="funding_and_support">Finançament i Suport</string>
    <string name="gallery">Galeria d\'Imatges</string>
    <string name="GPL">Veure GPL</string>
    <string name="gpl_heading">GPL</string>
    <string name="haveyoufound">Has trobat un mosquit tigre?</string>
    <string name="confirmation_q3_abdomenlegs">Té ratlles blanques a l\'abdomen i a les potes?</string>
    <string name="q2_abdomenlegs_text">El mosquit tigre té ratlles blanques a l\'abdomen i a les potes.</string>
    <string name="q2_abdomenlegs_title">Abdomen i Potes</string>
    <string name="here">Aquí</string>
    <string name="identifying_mosquitoes_title">Respon els 3 Tigre principis</string>
    <string name="lat_label">Latitud: </string>
    <string name="latblank">"Lat:         "</string>
    <string name="confirmation_q1_adult_sizecolor">És petit i negre amb ratlles blanques?</string>
    <string name="q1_sizecolor_text">El mosquit tigre és petit i negre amb ratlles blanques.</string>
    <string name="q1_sizecolor_title">Mida i color</string>
    <string name="letssee">Comprova-ho!</string>
    <string name="LGPL">Veure LGPL</string>
    <string name="location_found">POSICIÓ TROBADA</string>
    <string name="lon_label">Longitud: </string>
    <string name="lonblank">"Lon:         "</string>
    <string name="mail_message">Escriu aquest codi en un sobre, fica-hi el teu mosquit i envia\'l a:</string>
    <string name="mailing_spec_title">Envia una mostra</string>
    <string name="menu_flush_gps">Actualitza GPS</string>
    <string name="menu_locate_now">Localitza\'m</string>
    <string name="menu_map_save">Desa</string>
    <string name="menu_map_settings">Configura</string>
    <string name="menu_map_share">Comparteix</string>
    <string name="menu_settings">Preferències</string>
    <string name="menu_toggle_ccs">Visualitza Precisió</string>
    <string name="menu_toggle_view">Satèl·lit</string>
    <string name="mosquitoImageContentDesc">Imatge d\'un mosquit tigre</string>
    <string name="movelab">MoveLab\nCentre d\'Estudis Avançats de Blanes (CEAB-CSIC)</string>
    <string name="movelab_address1">C/ d\'accés a la Cala St. Francesc, 14</string>
    <string name="movelab_address2">Blanes. Girona. E-17300</string>
    <string name="movelab_banner_CD">MoveLab logo</string>
    <string name="my_location">Localització</string>
    <string name="no">No</string>
    <string name="noGPS">Clica aquí per activar el GPS</string>
    <string name="noGPSAlert">"El GPS està desconnectat. Vols activar-lo?"</string>
    <string name="noGPSnoNet">No se\'t pot localitzar perquè el GPS i la recepció de xarxa telefònica estan apagats. \nClica aquí per activar-los.</string>
    <string name="noGPSnoNetAlert">El GPS i la recepció de xarxa telefònica estan desactivats. No se\'t pot localitzar sense com a mínim un d\'ells activat. Vols activar-los ?</string>
    <string name="notes_title">Missatge</string>
    <string name="ok">OK</string>
    <string name="other_place">A un altre lloc</string>
    <string name="project_email">tigatrapp@ceab.csic.es</string>
    <string name="project_website">atrapaeltigre.com/</string>
    <string name="prov_label">Proveïdor: </string>
    <string name="recording">Viatjant</string>
    <string name="recording_trip">Viatjant...</string>
    <string name="renew_gps_alert">Si creus que el GPS no està funcionant correctament, pots reiniciar-lo. Això pot tardar uns minuts.</string>
    <string name="report">Crea una Tigre troballa</string>
    <string name="report_sent">Si cliques OK, la teva Tigre troballa s\'enviarà al centre de recerca.</string>
    <string name="report_sent_confirmation">Tigre troballa enviada. Gràcies!</string>
    <string name="reportGallery_CD">Botó per accedir a la galeria d\'imatges del mosquit tigre</string>
    <string name="saved_image_prefix">elMeuMapa</string>
    <string name="scm_CD">SCM logo</string>
    <string name="send_spec_text">Enviaràs el teu mosquit per correu postal al centre de recerca?</string>
    <string name="send_spec_si">Sí (NOTA: rebràs instruccions de com fer-ho més endavant)</string>
    <string name="share_with">Comparteix</string>
    <string name="start_trip">Inicia Viatge</string>
    <string name="start_trip_button_CD">Botó per iniciar el viatge</string>
    <string name="stop_trip_button_CD">Botó per acabar el viatge</string>
    <string name="stop_trip_q">Acabar Viatge?</string>
    <string name="submit">Envia</string>
    <string name="supported_by">Amb el suport de:</string>
    <string name="confirmation_q2_adult_headthorax">Té una ratlla blanca al cap i al tòrax?</string>
    <string name="q3_headthorax_text">El mosquit tigre té una ratlla blanca al cap i al tòrax.</string>
    <string name="q3_headthorax_title">Cap i Tòrax</string>
    <string name="tigatrapp_is_recording_your_trip">Tigatrapp està gravant el teu viatge</string>
    <string name="tigatrapp_recording">Tigatrapp Viatjant</string>
    <string name="tiger_car_image_CD">Dibuix d\'un mosquit viatjant dins d\'un cotxe</string>
    <string name="tiger_drawing_CD">Dibuix d\'un mosquit</string>
    <string name="tiger_head_diagram_CD">Diagrama d\'un mosquit tigre</string>
    <string name="tiger_legs_diagram_CD">Diagrama de l\'abdomen i les potes d\'un mosquit tigre</string>
    <string name="tiger_thorax_diagram_CD">Diagrama del cap i del tòrax d\'un mosquit tigre</string>
    <string name="time_label">Time and Date: </string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_switchboard">Switchboard</string>
    <string name="title_activity_tiger_finder">TigerFinder</string>
    <string name="title_activity_trip_notification">TripNotification</string>
    <string name="toggle_trip_off">Interrompre Viatge</string>
    <string name="toggle_trip_on">Reprendre Viatge</string>
    <string name="transported_q_text">Transportaves un mosquit en aquest viatge?</string>
    <string name="transported_qb_text">Era un mosquit tigre?</string>
    <string name="trip_data_sent">Viatge enviat. Gràcies!</string>
    <string name="type_here">Missatge pels científics</string>
    <string name="view_gpl_english">Veure GPL versió oficial</string>
    <string name="where_found_text">On l\'has trobat?</string>
    <string name="yes">Sí</string>
    <string name="you_found">Has trobat un mosquit tigre!</string>
    <string name="your_report_id_is">"El codi de la teva Tigre troballa és: "</string>
</resources>