<?xml version="1.0" encoding="utf-8"?>
<!--
 * Tigatrapp
 * Copyright (C) 2013, 2014  John R.B. Palmer, Aitana Oltra, Joan Garriga, and Frederic Bartumeus 
 * Contact: tigatrapp@ceab.csic.es
 * 
 * This file is part of Tigatrapp.
 * 
 * Tigatrapp is free software: you can redistribute it and/or modify 
 * it under the terms of the GNU General Public License as published by 
 * the Free Software Foundation, either version 3 of the License, or (at 
 * your option) any later version.
 * 
 * Tigatrapp is distributed in the hope that it will be useful, but 
 * WITHOUT ANY WARRANTY; without even the implied warranty of 
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
 * See the GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License along 
 * with Tigatrapp.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/splashLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/tigerlogo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="30dip" >

            <Button
                android:id="@+id/reportButtonSite"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginRight="30dip"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/switchboard_report_button_site" />

            <Button
                android:id="@+id/reportButtonAdult"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="30dip"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/switchboard_report_button_adult" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="30dip" >

            <Button
                android:id="@+id/dataMapButton"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginRight="30dip"
                android:layout_weight="1"
                android:contentDescription="@string/dataMap_CD"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/data_map_button" />

            <Button
                android:id="@+id/reportMainPic"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="30dip"
                android:layout_weight="1"
                android:contentDescription="@string/reportGallery_CD"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/gallery" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>