<?xml version="1.0" encoding="utf-8"?>
<!--
 * Tigatrapp
 * Copyright (C) 2013  John R.B. Palmer, Aitana Oltra, Joan Garriga, and Frederic Bartumeus 
 * Contact: tigatrapp@ceab.csic.es
 * 
 * This file is part of Tigatrapp.
 * 
 * Tigatrapp is free software: you can redistribute it and/or modify 
 * it under the terms of the GNU General Public License as published by 
 * the Free Software Foundation, either version 3 of the License, or (at 
 * your option) any later version.
 * 
 * Tigatrapp is distributed in the hope that it will be useful, but 
 * WITHOUT ANY WARRANTY; without even the implied warranty of 
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
 * See the GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License along 
 * with Tigatrapp.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_grey"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/haveYouFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dip"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:text="@string/haveyoufound"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/brown" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@drawable/divider_brown_gradient" />

        <TextView
            android:id="@+id/letsSee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dip"
            android:gravity="left"
            android:text="@string/letssee"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/brown" />

        <ImageButton
            android:id="@+id/getHelp"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:layout_gravity="center"
            android:layout_marginBottom="13dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/blue_rectangle"
            android:contentDescription="@string/checklist_CD"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/checklist_icon" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@drawable/divider_brown_gradient" />

        <TextView
            android:id="@+id/whereFoundLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginTop="5dip"
            android:text="@string/where_found_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/brown" />

        <RadioGroup
            android:id="@+id/whereFoundRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/whereRadioButtonHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dip"
                android:text="@string/here"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/brown" />

            <RadioButton
                android:id="@+id/whereRadioButtonOtherPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dip"
                android:text="@string/other_place"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/brown" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@drawable/divider_brown_gradient" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/buttonFromCamera"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:contentDescription="@string/button_from_camera_CD"
                android:paddingTop="10dip"
                android:scaleType="centerInside"
                android:src="@drawable/camera_pressed" />

            <ImageButton
                android:id="@+id/buttonNote"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:contentDescription="@string/button_note_CD"
                android:padding="10dip"
                android:scaleType="centerInside"
                android:src="@drawable/note_pressed" />

            <ImageButton
                android:id="@+id/buttonMailingSpec"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:contentDescription="@string/button_spec_CD"
                android:padding="10dip"
                android:scaleType="centerInside"
                android:src="@drawable/mail_pressed" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@drawable/divider_brown_gradient" />

        <ImageButton
            android:id="@+id/buttonReportSubmit"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:background="@drawable/blue_rectangle"
            android:contentDescription="@string/button_submit_CD"
            android:hapticFeedbackEnabled="true"
            android:padding="0dip"
            android:scaleType="centerInside"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/brown" />
    </LinearLayout>

</ScrollView>