<?xml version="1.0" encoding="utf-8"?>
<!--
 * Tigatrapp
 * Copyright (C) 2013, 2014  John R.B. Palmer, Aitana Oltra, Joan Garriga, and Frederic Bartumeus 
 * Contact: tigatrapp@ceab.csic.es
 * 
 * This file is part of Tigatrapp.
 * 
 * Tigatrapp is free software: you can redistribute it and/or modify 
 * it under the terms of the GNU General Public License as published by 
 * the Free Software Foundation, either version 3 of the License, or (at 
 * your option) any later version.
 * 
 * Tigatrapp is distributed in the hope that it will be useful, but 
 * WITHOUT ANY WARRANTY; without even the implied warranty of 
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
 * See the GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License along 
 * with Tigatrapp.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tigercarsmall" />

                <TextView
                    android:id="@+id/stopTripTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/stop_trip_q"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/stopTripRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/stopTripRadioButtonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dip"
                    android:text="@string/save_trip" />

                <RadioButton
                    android:id="@+id/stopTripRadioButtonDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dip"
                    android:text="@string/delete_trip" />
            </RadioGroup>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/transportedTigerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/transported_q_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <RadioGroup
                android:id="@+id/specRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dip"
                android:layout_marginRight="10dip"
                android:orientation="horizontal"
                android:visibility="invisible" >

                <RadioButton
                    android:id="@+id/specRadioButtonYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dip"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/specRadioButtonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dip"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/specRadioButtonDontKnow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dip"
                    android:text="@string/dontknow" />
            </RadioGroup>

            <TextView
                android:id="@+id/transportedTigerQuestionTwoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/transported_qb_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <RadioGroup
                android:id="@+id/specQuestionTwoRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dip"
                android:layout_marginRight="10dip"
                android:orientation="horizontal"
                android:visibility="invisible" >

                <RadioButton
                    android:id="@+id/specSubRadioButtonYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dip"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/specSubRadioButtonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dip"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/specSubRadioButtonDontKnow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dip"
                    android:text="@string/dontknow" />
            </RadioGroup>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonStopTripOK"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:text="@string/ok" />

                <Button
                    android:id="@+id/buttonReturnToTrip"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>